@@ -104,7 +104,35 @@ name|lucene
 operator|.
 name|analysis
 operator|.
+name|CannedTokenStream
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
 name|MockAnalyzer
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
 import|;
 end_import
 
@@ -119,6 +147,20 @@ operator|.
 name|document
 operator|.
 name|Document
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|document
+operator|.
+name|Field
 import|;
 end_import
 
@@ -647,6 +689,137 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+comment|// LUCENE-4221: we have to let these thru, for now
+DECL|method|testBogusTermVectors
+specifier|public
+name|void
+name|testBogusTermVectors
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|Directory
+name|dir
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|iw
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+name|newIndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+literal|null
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|FieldType
+name|ft
+init|=
+operator|new
+name|FieldType
+argument_list|(
+name|TextField
+operator|.
+name|TYPE_NOT_STORED
+argument_list|)
+decl_stmt|;
+name|ft
+operator|.
+name|setStoreTermVectors
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|ft
+operator|.
+name|setStoreTermVectorOffsets
+argument_list|(
+literal|true
+argument_list|)
+expr_stmt|;
+name|Field
+name|field
+init|=
+operator|new
+name|Field
+argument_list|(
+literal|"foo"
+argument_list|,
+literal|""
+argument_list|,
+name|ft
+argument_list|)
+decl_stmt|;
+name|field
+operator|.
+name|setTokenStream
+argument_list|(
+operator|new
+name|CannedTokenStream
+argument_list|(
+operator|new
+name|Token
+argument_list|(
+literal|"bar"
+argument_list|,
+literal|5
+argument_list|,
+literal|10
+argument_list|)
+argument_list|,
+operator|new
+name|Token
+argument_list|(
+literal|"bar"
+argument_list|,
+literal|1
+argument_list|,
+literal|4
+argument_list|)
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|doc
+operator|.
+name|add
+argument_list|(
+name|field
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|iw
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// checkindex
 block|}
 DECL|method|testLuceneConstantVersion
 specifier|public
