@@ -48,6 +48,9 @@ Bug Fixes
   leave temp files behind in /tmp on Windows. Fix Sort to not leave
   temp files behind when /tmp is a separate volume. (Uwe Schindler, Robert Muir)
 
+* LUCENE-4221: Fix overeager CheckIndex validation for term vector offsets.
+  (Robert Muir)
+
 Build
 
 * LUCENE-4094: Support overriding file.encoding on forked test JVMs
